--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -1514,7 +1514,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ min_{w, b, \\xi} \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n})  - \\sum_n \\check{\\beta_n} \\check{\\xi_n}  - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n} $$\n",
+    "$$ min_{w, b, \\xi} \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n})  \\\\ \n",
+    "- \\sum_n \\check{\\beta_n} \\check{\\xi_n}  - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n} $$\n",
     "\n",
     "$$ \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0}  min_{w, b, \\xi} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n}) - \\sum_n \\check{\\beta_n} \\check{\\xi_n} - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n}$$"
    ]
