--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -841,16 +841,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\Downarrow 从前两个条件（complementary slackness）可以得到数据中的三种点： $$"
+    "$$ \\Downarrow 从前两个条件（complementary slackness）可以得到数据中的三种点（按照空间位置分）： $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ free SV(自由支持向量，100\\%确定是支持向量）: 0 < \\alpha_n < C $$\n",
-    "$$ bounded SV（限制支持向量，有可能分错的点）: \\alpha_n = C $$\n",
-    "$$ 其它（100\\%不可能分错的点）：\\alpha_n = 0 $$"
+    "$$胖边界上的点n ：0 \\leq \\alpha_n \\leq C$$\n",
+    "$$分对的点（不包含胖边界上的点）：\\alpha_n = 0$$\n",
+    "$$ 分错的点：\\alpha_n = C$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ 从上面可以归纳出，真正的free SV(自由支持向量，100\\%确定是支持向量）满足: 0 < \\alpha_n < C，其可以用来计算w。$$"
    ]
   },
   {
@@ -1394,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "类似于 Soft-Margin SVM 里面的hinge损失函数: $ hinge(y, s) = \\max (1 - y s, 0)，其和回归问题中应用的平方损失函数 SE(y, s) = (y - s)^2 的区别如下图： $"
+    "类似于 Soft-Margin SVM 里面的hinge损失函数: $ hinge(y, s) = \\max (1 - y s, 0) $，其和回归问题中应用的平方损失函数 $SE(y, s) = (y - s)^2$ 的区别如下图："
    ]
   },
   {
@@ -1517,7 +1524,8 @@
     "$$ min_{w, b, \\xi} \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n})  \\\\ \n",
     "- \\sum_n \\check{\\beta_n} \\check{\\xi_n}  - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n} $$\n",
     "\n",
-    "$$ \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0}  min_{w, b, \\xi} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n}) - \\sum_n \\check{\\beta_n} \\check{\\xi_n} - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n}$$"
+    "$$ \\max_{\\check{\\alpha_n} \\geq 0, \\hat{\\alpha_n} \\geq 0, \\beta_n \\geq 0}  min_{w, b, \\xi} \\frac{1}{2} w^T w + C \\sum_n (\\check{\\xi_n} + \\hat{\\xi_n}) + \\sum_n \\check{\\alpha_n} (-\\epsilon - \\check{\\xi_n} - y_n + w^T  x_n + b) + \\sum_n \\hat{\\alpha_n} (y_n - w^T x_n - b - \\epsilon - \\hat{\\xi_n}) \\\\ \n",
+    "- \\sum_n \\check{\\beta_n} \\check{\\xi_n} - \\sum_n \\hat{\\beta_n} \\hat{\\xi_n}$$"
    ]
   },
   {
@@ -1555,7 +1563,7 @@
    "source": [
     "$$ \\beta_n = \\check{\\alpha_n} - \\hat{\\alpha_n} $$\n",
     "$$ 自由支持向量（100\\%是支持向量，可用于计算b）: 0 < |\\beta_n| < C $$\n",
-    "$$ 限制自由变量（有可能分错的点）：|\\beta_n| ＝ C $$\n",
+    "$$ 限制自由变量（有可能落在胖边界上有可能分错的点）：|\\beta_n| ＝ C $$\n",
     "$$ tube内部的点(100\\%落在分对的点）：\\beta_n = 0 $$\n"
    ]
   }
