--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -1563,9 +1563,18 @@
    "source": [
     "$$ \\beta_n = \\check{\\alpha_n} - \\hat{\\alpha_n} $$\n",
     "$$ 自由支持向量（100\\%是支持向量，可用于计算b）: 0 < |\\beta_n| < C $$\n",
-    "$$ 限制自由变量（有可能落在胖边界上有可能分错的点）：|\\beta_n| ＝ C $$\n",
-    "$$ tube内部的点(100\\%落在分对的点）：\\beta_n = 0 $$\n"
+    "$$ 限制自由变量（有可能落在胖边界上、有可能分错的点）：|\\beta_n| ＝ C $$\n",
+    "$$ tube内部的点(100\\%分对的点，有可能落在胖边界上）：\\beta_n = 0 $$\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
