--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -374,7 +374,7 @@
     "+ 直接多元建模的多元分类\n",
     "    + Softmax（todo）\n",
     "        + 复杂度：\n",
-    "    + Multi Logistic Regression（todo）\n",
+    "    + Multinomial Logistic Regression（todo）\n",
     "        + 复杂度："
    ]
   },
