--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -513,7 +513,7 @@
     "\n",
     "    这叫朴素贝叶斯假设。基于这种假设的模型常用于垃圾邮件分类、拼写提示等。\n",
     "    \n",
-    "    生成式和判别式模型有许多可以对比的地方，也各有优缺点。但是这里只说一个：既然前者基于某个假设，那么他其实是强制把模型的Hypothesis Set固定在一个经过这个假设正则化后的空间中。如果这个Regularizer可以很好的描述D，那么模型就work了。否则，她就可能效果很差。所以应用生成式模型之前一定要研究一下数据是否符合该模型的假设。\n",
+    "    生成式和判别式模型有许多可以对比的地方，也各有优缺点。但是这里只说一个：既然前者基于某个假设，那么他其实是强制把模型的Hypothesis Set固定在一个经过这个假设正则化后的空间中。如果这个Regularizer可以很好的描述D，那么模型就work了，而且需要的训练数据也较小（为什么？提示：VC维低了）。否则，她就可能效果很差。所以应用生成式模型之前一定要研究一下数据是否符合该模型的假设。\n",
     "\n",
     "    两种模型的详细比较准备单独一讲总结（todo）。"
    ]
