--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -340,10 +340,8 @@
     "+ error func: $ E_{in}(h(x), y) = E_{CE}(Wx, y) $\n",
     "+ 权重更新：\n",
     "\n",
-    "$$\n",
-    "W_{t+1} = W_t - \\eta \\nabla E_{in}(W_t) \n",
-    "        = W_t - \\eta \\frac{1}{N} \\sum \\limits_{N} \\theta(-y_N W_t^T x_N)\n",
-    "$$\n",
+    "$$ W_{t+1} = W_t - \\eta \\nabla E_{in}(W_t) \n",
+    "        = W_t - \\eta \\frac{1}{N} \\sum \\limits_{N} \\theta(-y_N W_t^T x_N) $$\n",
     "\n",
     "    这里$\\eta$叫做学习率（learning rate），控制梯度下降的速度。实践中一般取0.1。\n",
     "+ 迭代停止条件：足够多的次数（经验值）\n",
@@ -440,8 +438,7 @@
     "+ Leave One Out(LOO)\n",
     "    + 策略：D的大小为N，则每次用N-1个数据训练，然后用剩下的1个数据计算$E_{val}$，枚举每个数据，最后求得$E_{val}$的均值就是的$E_{val}$：\n",
     "    \n",
-    "    $$\n",
-    "E_{loo}(H_m) = \\frac{1}{N} \\sum \\limits_{N} E_{val}(H_m, n)\n",
+    "    $$ E_{loo}(H_m) = \\frac{1}{N} \\sum \\limits_{N} E_{val}(H_m, n)\n",
     "            = \\frac{1}{N} \\sum \\limits_{N} E_{point-wise}(h_m(X_n), Y_n) $$\n",
     "            \n",
     "    其中$h_m$是$A_m$基于$D-X_n$的数据集，在$H_m$空间中找到的最优的h（这是一个训练过程）。注意，这里用了泛化的$E_{point-wise}$来代表所有可能的具体的point-wise的Err，因为后者也可能是一种超参数。\n",
