--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -422,37 +422,38 @@
    "metadata": {},
    "source": [
     "II. 监控仪表盘（Parameter Tuning）\n",
-    "+ 到目前为止我们需要手工指定的参数（超参数）有：\n",
-    "    + 哪种模型（LRegression? LR? Pocket?）\n",
-    "    + 多项式非线性变换中的Q多大?\n",
-    "    + 梯度下降中的学习率$\\eta$多大\n",
-    "    + 哪种Regularizer？\n",
-    "    + Weighted Classification 中 False Negative 和 False Positive的权重比是？\n",
-    "    + 多元分类到底是用OVA 还是 OVO 还是 Softmax？\n",
+    " + 到目前为止我们需要手工指定的参数（超参数）有：\n",
+    "  + 哪种模型（LRegression? LR? Pocket?）\n",
+    "  + 多项式非线性变换中的Q多大?\n",
+    "  + 梯度下降中的学习率$\\eta$多大\n",
+    "  + 哪种Regularizer？\n",
+    "  + Weighted Classification 中 False Negative 和 False Positive的权重比是？\n",
+    "  + 多元分类到底是用OVA 还是 OVO 还是 Softmax？\n",
     "    等等\n",
     "    \n",
-    "    这些参数（决策）的组合本身就是指数增长的（假设最后的组合数目为M），如果这些组合统统都在$E_{in}$上一较高下，那么就相当于拿了一个VC维度非常巨大（$\\sum \\limits_{M}|H_m|，|H_m|是h_m的Hypothesis Set大小$）的Hypothesis Set来进行优化，找出其中的g。这就相当于有了一个VC维度巨大的新的模型，这就不能保证问题是可以学习的了（参考WHY小节）。那么如果我们在一个保留的validation Dataset上验证Err（$E_{val}$），那么我们用来找g的Hypothesis Set的大小则是M。这样在M不是很大的时候，问题就是可以学习的。\n",
+    "  这些参数（决策）的组合本身就是指数增长的（假设最后的组合数目为M），如果这些组合统统都在$E_{in}$上一较高下，那么就相当于拿了一个VC维度非常巨大（$\\sum \\limits_{M}|H_m|，|H_m|是h_m的Hypothesis Set大小$）的Hypothesis Set来进行优化，找出其中的g。这就相当于有了一个VC维度巨大的新的模型，这就不能保证问题是可以学习的了（参考WHY小节）。那么如果我们在一个保留的validation Dataset上验证Err（$E_{val}$），那么我们用来找g的Hypothesis Set的大小则是M。这样在M不是很大的时候，问题就是可以学习的。\n",
     "\n",
-    "但是我们去哪里找这个validation Dataset呢？方法便是从D中保留一块，这种方法叫做Cross Validation，具体分为：\n",
+    "  但是我们去哪里找这个validation Dataset呢？方法便是从D中保留一块，这种方法叫做Cross Validation，具体分为：\n",
     "\n",
-    "+ Leave One Out(LOO)\n",
-    "    + 策略：D的大小为N，则每次用N-1个数据训练，然后用剩下的1个数据计算$E_{val}$，枚举每个数据，最后求得$E_{val}$的均值就是的$E_{val}$：\n",
+    " + Leave One Out(LOO)\n",
+    " \n",
+    "  策略：D的大小为N，则每次用N-1个数据训练，然后用剩下的1个数据计算$E_{val}$，枚举每个数据，最后求得$E_{val}$的均值就是的$E_{val}$：\n",
     "    \n",
-    "    $$ E_{loo}(H_m) = \\frac{1}{N} \\sum \\limits_{N} E_{val}(H_m, n)\n",
-    "            = \\frac{1}{N} \\sum \\limits_{N} E_{point-wise}(h_m(X_n), Y_n) $$\n",
+    "   $$ E_{loo}(H_m) = \\frac{1}{N} \\sum \\limits_{N} E_{val}(H_m, n)\n",
+    "                = \\frac{1}{N} \\sum \\limits_{N} E_{point-wise}(h_m(X_n), Y_n) $$\n",
     "            \n",
-    "    其中$h_m$是$A_m$基于$D-X_n$的数据集，在$H_m$空间中找到的最优的h（这是一个训练过程）。注意，这里用了泛化的$E_{point-wise}$来代表所有可能的具体的point-wise的Err，因为后者也可能是一种超参数。\n",
+    "  其中$h_m$是$A_m$基于$D-X_n$的数据集，在$H_m$空间中找到的最优的h（这是一个训练过程）。注意，这里用了泛化的$E_{point-wise}$来代表所有可能的具体的point-wise的Err，因为后者也可能是一种超参数。\n",
     "    \n",
-    "    那么最后要求的g就是：\n",
-    "$$ G = \\underset{H_m}{\\mathrm{argmin}}  E_{loo}(H_m) $$\n",
-    "$$ g = A_G (G, D) $$\n",
-    "    其中G是g所在的Hypothesis Set，而$A_G$是跟其配套的算法。注意最后的g是在整个D上计算所得。可以证明（略）：$E_{loo}(H_m)$ ‘几乎’是$E_{out}(g_m)$的无偏估计(almost unbiased estimate）。而$E_{in}(H_m)$则不是。\n",
+    "  那么最后要求的g就是：\n",
+    "  $$ G = \\underset{H_m}{\\mathrm{argmin}}  E_{loo}(H_m) $$\n",
+    "  $$ g = A_G (G, D) $$\n",
+    "  其中G是g所在的Hypothesis Set，而$A_G$是跟其配套的算法。注意最后的g是在整个D上计算所得。可以证明（略）：$E_{loo}(H_m)$ ‘几乎’是$E_{out}(g_m)$的无偏估计(almost unbiased estimate）。而$E_{in}(H_m)$则不是。\n",
     "    \n",
-    "    从上面可以看出LOO的复杂度为$O(N*\\sum单个模型的复杂度)$，当N很大时会非常高，实际应用非常有限。\n",
+    "  从上面可以看出LOO的复杂度为$O(N*\\sum单个模型的复杂度)$，当N很大时会非常高，实际应用非常有限。\n",
     "    \n",
-    "+ K-Fold\n",
+    " + K-Fold\n",
     "\n",
-    "    为了克服LOO复杂度高的缺点，我们才用V叠交叉验证代替之。其原理就是将D等分为K份，然后每次用一份作为Validation Dataset，枚举每一份。这样复杂度便降为$O(K*\\sum单个模型的复杂度)$。实际应用中K一般取5~10。"
+    "  为了克服LOO复杂度高的缺点，我们才用V叠交叉验证代替之。其原理就是将D等分为K份，然后每次用一份作为Validation Dataset，枚举每一份。这样复杂度便降为$O(K*\\sum单个模型的复杂度)$。实际应用中K一般取5~10。"
    ]
   },
   {
