--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -438,15 +438,22 @@
     " + Leave One Out(LOO)\n",
     " \n",
     "  策略：D的大小为N，则每次用N-1个数据训练，然后用剩下的1个数据计算$E_{val}$，枚举每个数据，最后求得$E_{val}$的均值就是的$E_{val}$：\n",
-    "    \n",
-    "   $$ E_{loo}(H_m) = \\frac{1}{N} \\sum \\limits_{N} E_{val}(H_m, n)\n",
-    "                = \\frac{1}{N} \\sum \\limits_{N} E_{point-wise}(h_m(X_n), Y_n) $$\n",
+    "  \n",
+    "  \\begin{equation} \\label{}\n",
+    "  \\begin{split}\n",
+    "  E_{loo}(H_m) & = \\frac{1}{N} \\sum_{N} E_{val}(H_m, n) \\\\\n",
+    "               & = \\frac{1}{N} \\sum_{N} E_{point-wise}(h_m(X_n), Y_n)\n",
+    "  \\end{split}\n",
+    "  \\end{equation}\n",
     "            \n",
     "  其中$h_m$是$A_m$基于$D-X_n$的数据集，在$H_m$空间中找到的最优的h（这是一个训练过程）。注意，这里用了泛化的$E_{point-wise}$来代表所有可能的具体的point-wise的Err，因为后者也可能是一种超参数。\n",
     "    \n",
     "  那么最后要求的g就是：\n",
-    "  $$ G = \\underset{H_m}{\\mathrm{argmin}}  E_{loo}(H_m) $$\n",
-    "  $$ g = A_G (G, D) $$\n",
+    "  \\begin{gather*} \n",
+    "  G = \\underset{H_m}{\\mathrm{argmin}}  E_{loo}(H_m) \\\\ \n",
+    "  g = A_G (G, D)\n",
+    "  \\end{gather*}\n",
+    "\n",
     "  其中G是g所在的Hypothesis Set，而$A_G$是跟其配套的算法。注意最后的g是在整个D上计算所得。可以证明（略）：$E_{loo}(H_m)$ ‘几乎’是$E_{out}(g_m)$的无偏估计(almost unbiased estimate）。而$E_{in}(H_m)$则不是。\n",
     "    \n",
     "  从上面可以看出LOO的复杂度为$O(N*\\sum单个模型的复杂度)$，当N很大时会非常高，实际应用非常有限。\n",
