--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -378,7 +378,7 @@
     "  + Multinomial Logistic Regression（todo）\n",
     "    + 复杂度：\n",
     "        \n",
-    " 其实OVA和OVO可以看做一个目标函数（Err，其实就是另一）不能直接优化的分类模型，但是可以通过构成他的小的二元分类模型间接优化。\n",
+    " 其实OVA和OVO可以看做一个目标函数（Err，其实就是$E_{01}$）不能直接优化的分类模型，但是可以通过构成他的小的二元分类模型间接优化。\n",
     " \n",
     " 下面的三维度演示了两种分类方法的Err情况。可以看出，Softmax相对于（结果通过概率分布取最大值实现）OVA或OVO（结果通过二元分类器的最大投票决定），前者的Err是后者的上界。"
    ]
