--- a/ML-Foundation.ipynb
+++ b/ML-Foundation.ipynb
@@ -500,6 +500,7 @@
     "  g = A_G (G, D)\n",
     "  \\end{gather*}\n",
     "  $$\n",
+    "  \n",
     "  其中G是g所在的Hypothesis Set，而$A_G$是跟其配套的算法。注意最后的g是在整个D上计算所得。可以证明（略）：$E_{loo}(H_m)$ ‘几乎’是$E_{out}(g_m)$的无偏估计(almost unbiased estimate）。而$E_{in}(H_m)$则不是。\n",
     "    \n",
     "  从上面可以看出LOO的复杂度为$O(N*\\sum$单个模型的复杂度$)$，当N很大时会非常高，实际应用非常有限。\n",
@@ -556,8 +557,9 @@
     "    上面模型的Hypothesis，不管是直接建模P(y|x)，还是通过建模f来间接近似P(y|x)，都是对条件概率P(y|x)建模。这种模型是判别式的。\n",
     "\n",
     "    而也可以对全概率P(x, y)建模，这样的模型是生成式的。虽然我们的目的还是求的P(y|x)，但这可以很容易的通过贝叶斯定理实现：\n",
-    "\n",
-    "$$ P(y|x) = \\frac{P(x, y)}{P(x)}$$\n",
+    "$$ \n",
+    "P(y|x) = \\frac{P(x, y)}{P(x)}\n",
+    "$$\n",
     "\n",
     "    由于P(x)是固定的，我们可以只求出针对不同y的P(x,y)，然后做一个归一化就行了。那P(x,y)到底该怎么建模呢？一半都是基于一些假设，比如我们可以假设：\n",
     "    \n",
